[gd_scene load_steps=15 format=2]

[ext_resource path="res://AUnusedRainIsoAssets/ReasonablyWhiteClouds.png" type="Texture" id=1]
[ext_resource path="res://RainIsoMainContents/Resources/ReasonablyWhiteCloudsOutline.png" type="Texture" id=2]
[ext_resource path="res://RainIsoMainContents/Resources/ReasonablyWhiteCloudsFrame6.png" type="Texture" id=3]
[ext_resource path="res://RainIsoMainContents/Resources/ReasonablyWhiteCloudsFrame8.png" type="Texture" id=4]
[ext_resource path="res://RainIsoMainContents/Resources/ReasonablyWhiteCloudsFrame1.png" type="Texture" id=5]
[ext_resource path="res://RainIsoMainContents/Resources/ReasonablyWhiteCloudsFrame7.png" type="Texture" id=6]
[ext_resource path="res://RainIsoMainContents/Resources/ReasonablyWhiteCloudsFrame3.png" type="Texture" id=7]
[ext_resource path="res://RainIsoMainContents/Resources/ReasonablyWhiteCloudsFrame5.png" type="Texture" id=8]
[ext_resource path="res://RainIsoMainContents/Resources/ReasonablyWhiteCloudsFrame4.png" type="Texture" id=9]
[ext_resource path="res://RainIsoMainContents/Resources/ReasonablyWhiteCloudsFrame2.png" type="Texture" id=10]
[ext_resource path="res://RainIsoMainContents/Scenes/ReasonablyWhiteClouds.gd" type="Script" id=11]

[sub_resource type="Animation" id=1]
resource_name = "CloudsAnimation"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 2 ) ]
}

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.25507
height = 6.72176

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 6.24084 )

[node name="ReasonablyWhiteClouds" type="KinematicBody2D"]
script = ExtResource( 11 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/CloudsAnimation = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource( 2 )

[node name="CloudTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CountTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="CloudTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="CloudTimer" to="." method="_on_CloudTimer_timeout"]
[connection signal="timeout" from="CountTimer" to="." method="_on_CountTimer_timeout"]
